# taxiAPI

./: .gitignore  README.md  Taskfile.yml  Taskfile_windows.yml  manage.py  pyproject.toml
app_taxi/: admin.py  api.py  apps.py  models.py  tests.py  urls.py  views.py
app_taxi/templates/app_taxi/: user_confirm_delete.html  user_detail.html  user_form.html  user_list.html
app_taxi/templates/registration/: login.html  register.html
project/: settings.py  urls.py
