[tool.poetry]
name = "taxiapi"
version = "0.1.0"
description = ""
authors = ["prxfsk17 <yakubsha22888@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
