[tool.poetry]
name = "taxiapi"
version = "0.1.0"
description = ""
authors = ["prxfsk17 <yakubsha22888@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
uvicorn = "^0.22.0"
dirs = "^0.1.0"
pydantic = "^1.10.9"
orjson = "^3.9.1"
debug = "^0.3.2"
db = "^0.1.1"
django-db = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
