[tool.poetry]
name = "taxiapi"
version = "0.1.0"
description = ""
authors = ["prxfsk17 <yakubsha22888@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
uvicorn = "^0.22.0"
dirs = "^0.1.0"
pydantic = "^1.10.9"
orjson = "^3.9.1"
debug = "^0.3.2"
db = "^0.1.1"
django-db = "^0.0.7"
flake8 = "^6.0.0"
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"
django-stubs = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
target-version = ["py310"]
include = '^.+\.pyi?$'
extend-exclude = '''
(
    .*\.local.*
    | .*\.idea.*
    | .*\.vscode.*
)
'''


[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"
skip = [
    ".local",
]


[tool.mypy]
cache_dir = ".local/mypy/"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = [".local/*", ]
files = ["."]
no_implicit_optional = true
plugins = [
    "pydantic.mypy",
]
pretty = true
python_version = "3.10"
show_error_context = true
sqlite_cache = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
